--- a/BTSolution.UI/src/app/shared/tokengen-accesstokenbar/tokengen-accesstokenbar.component.html
+++ b/BTSolution.UI/src/app/shared/tokengen-accesstokenbar/tokengen-accesstokenbar.component.html
@@ -6,9 +6,43 @@
       <p class="fw-bold" *ngIf="this.accessTokens.length > 1">Currently there are {{this.accessTokens.length}} valid AccessTokens</p>
     </div>
     <div class="ms-auto p-2">
-      <button type="button" class="btn btn-primary ms-2">Add</button>
-      <button type="button" class="btn btn-primary ms-2" *ngIf="this.accessTokens.length > 0">Show all</button>
+      <button type="button" class="btn btn-success ms-2" (click)="open(generateAccessTokenModal)">Generate new</button>
+      <button type="button" class="btn btn-primary ms-2"
+        (click)="this.showAccessTokens()" *ngIf="this.accessTokens.length > 0 && this.isShowingAccessTokens == false">Show all</button>
+      <button type="button" class="btn btn-primary ms-2"
+        (click)="this.hideAccessTokens()" *ngIf="this.accessTokens.length > 0 && this.isShowingAccessTokens == true">Hide all</button>
     </div>
+  </div>
+  <div id="accessTokenList" class="d-flex align-content-start flex-wrap mt-2"
+    *ngIf="this.isShowingAccessTokens == true">
+    <app-tokengen-accesstokencard
+      *ngFor="let accessToken of this.accessTokens"
+      class="col-12"
+      [accessTokenId]="accessToken.accessTokenId"
+      [expiryDate]="accessToken.expiryDate"
+      [token]="accessToken.token"
+      [userId]="accessToken.userId"
+      [userName]="accessToken.userName"
+      ></app-tokengen-accesstokencard>
   </div>
 </div>
 
+<ng-template #generateAccessTokenModal let-modal>
+  <div class="modal-header">
+    <h5 class="modal-title">Generate new AccessToken</h5>
+  </div>
+  <div class="modal-body">
+    <div class="form-floating mb-3">
+      <input type="number" class="form-control" #userId (keyup)="getUserId(userId.value)">
+      <label for="user-name">User ID</label>
+    </div>
+    <div class="form-floating">
+      <input type="text" class="form-control" #duration (keyup)="getDuration(duration.value)">
+      <label for="user-name">Duration</label>
+    </div>
+  </div>
+  <div class="modal-footer">
+    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal" (click)="modal.close()">Cancel</button>
+    <button type="button" class="btn btn-success" (click)="this.generateAccessToken(); modal.close()">Generate</button>
+  </div>
+</ng-template>
