Finished AccessToken compoent

--- a/BTSolution.UI/src/app/shared/tokengen-accesstokencard/tokengen-accesstokencard.component.html
+++ b/BTSolution.UI/src/app/shared/tokengen-accesstokencard/tokengen-accesstokencard.component.html
@@ -2,5 +2,5 @@
   <p class="me-2">UserID: {{userId}}</p>
   <p class="me-2">Username: {{userName}}</p>
   <p class="ms-2 ms-auto">Token: {{token}}</p>
-  <p class="ms-2">Remaining time: {{expiryDate}}</p>
+  <p class="ms-2">Remaining time: {{timeLeft}}</p>
 </div>
