Renamed everything to be kebab-case

--- a/BTSolution.UI/src/app/app.component.html
+++ b/BTSolution.UI/src/app/app.component.html
@@ -1,6 +1,6 @@
 <div id="content-wrapper">
-  <app-tokengen-title></app-tokengen-title>
-  <app-tokengen-userbar></app-tokengen-userbar>
-  <app-tokengen-accesstokenbar></app-tokengen-accesstokenbar>
+  <app-title></app-title>
+  <app-user-bar></app-user-bar>
+  <app-token-bar></app-token-bar>
   <router-outlet></router-outlet>
 </div>
